# advent-of-code

./: .gitignore  .scalafmt.conf  README.md  build.sbt
project/: plugins.sbt
src/main/go/: go.mod
src/main/go/aoc2022/: day01.go
src/main/java/aoc/: Loader.java  Playground.java
src/main/java/aoc/j2022/: Day1.java
src/main/java/jpuzzles/: FindSmallestPositive.java  RemoveDuplicates2.java  ToBits.java
src/main/java/jpuzzles/leetcode/: FindDuplicateConstantSpace.java  FindSmallestPositive.java  PalindromeNumber.java
src/main/java/puzzles/: Playground.java
src/main/kotlin/aoc/: Aoc.kt
src/main/kotlin/aoc/k2022/: Aoc.kt  Day1.kt
src/main/kotlin/puzzles/: ToBits.kt
src/main/python/aoc2022/: day1.py
src/main/resources/: input12_2.txt
src/main/resources/aoc2022/: input6.txt
src/main/rust/: Cargo.toml
src/main/rust/aoc2017/: day1.rs
src/main/rust/aoc2022/: day1.rs
src/main/scala/: Aso.scala  Day1.scala  Day10.scala  Day11.scala  Day12.scala  Day13.scala  Day15.scala  Day16.scala  Day18.scala  Day19.scala  Day1Linear.scala  Day2.scala  Day20.scala  Day21.scala  Day24.scala  Day25.scala  Day3.scala  Day4.scala  Day5.scala  Day6.scala  Day7.scala  Day8.scala  Day9.scala
src/main/scala/aoc/: Aoc.scala
src/main/scala/aso/: Aso.scala
src/main/scala/codingame/: PowerOfThor.scala
src/main/scala/googlechallenge/: AllocationHouse2020.scala
src/main/scala/puzzles/: ArraySizeToHalf.scala  CompareArrays.scala  FindDigits.scala  FirstUniqueChar.scala  IsRectangle.scala  Roman2Int.scala  Sherlock.scala  Sliding.scala  ToBits.scala  Week1.scala
(+192 files in other folders)
