[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"
authors = ["velocorner.com"]
description = "advent of code with rust"
homepage = "https://velocorner.com"
keywords = ["aoc", "advent-of-code"]

[[bin]]
name = "aoc2017day1"
path = "aoc2017/day1.rs"

[[bin]]
name = "aoc2022day1"
path="aoc2022/day1.rs"
